# Demos

./: .gitignore  README.md
google test/lesson_1/Gtest_Demo/: CMakeLists.txt  Readme.md
google test/lesson_1/Gtest_Demo/src/: example.c
google test/lesson_1/Gtest_Demo/tests/: test.cc
lesson_1/Gtest_Demo/tests/: CMakeLists.txt
vbslite_trans/: README.md  (+1 more)
vbslite_trans/lesson1/: CMakeLists.txt  README.md
vbslite_trans/lesson1/local_test/: app_config.xml  app_test.c
vbslite_trans/lesson1/mvbs/: CMakeLists.txt
vbslite_trans/lesson1/mvbs/include/mvbs/core/: types.h
vbslite_trans/lesson1/mvbs/include/mvbs/core/cdr/: helpers.h
vbslite_trans/lesson1/mvbs/include/mvbs/core/entities/: ep_attr.h  reader_proxy.h  stateful_writer.h
vbslite_trans/lesson1/mvbs/include/mvbs/core/history/: reader_cache.h
vbslite_trans/lesson1/mvbs/include/mvbs/core/netio/: udp.h
vbslite_trans/lesson1/mvbs/include/mvbs/rte/: Dds_Adaptor_Interface.h
vbslite_trans/lesson1/mvbs/include/mvbs/rtps/: locator.h
vbslite_trans/lesson1/mvbs/include/mvbs/sections/: start_sec_code.h
vbslite_trans/lesson1/mvbs/include/mvbs/utils/: mvbs_list.h  rand.h  timer.h
vbslite_trans/lesson1/mvbs/include/rpc/: rpc.h
vbslite_trans/lesson1/mvbs/src/adapter/auto/src/: mvbs_adapter_base.c  mvbs_adapter_ipc.c
vbslite_trans/lesson1/mvbs/src/adapter/posix/src/: mvbs_adapter_ipc.c
vbslite_trans/lesson1/mvbs/src/core/diag/: query_deserialize.c
vbslite_trans/lesson1/mvbs/src/core/discovery/: discovery.c  dpde.c  spdp.h
vbslite_trans/lesson1/mvbs/src/core/qos/: e2e.c
vbslite_trans/lesson1/mvbs/src/core/transport/: local_transport.c  transport.c
vbslite_trans/lesson1/mvbs/src/core/utils/: mm_stat.c  rand.c  timer.c  tracepoint.c
vbslite_trans/lesson1/mvbs/src/mcdr/: mcdr_serialize.c
vbslite_trans/lesson1/mvbs/src/rpc/: rpc_client.c  rpc_common.c
vbslite_trans/lesson1/tools/: README.md
vbslite_trans/lesson1/tools/mvbs-cfg/example/: dds_cfg.xml
vbslite_trans/lesson1/tools/mvbs-cfg/utils/: calculate_timer.py
vbslite_trans/lesson1/tools/mvbs-idl/resources/context/: functions.py
vbslite_trans/lesson1/tools/mvbs-idl/resources/template/: typeRpcClientHeader.jinja2  typeRpcServerBody.jinja2
vbslite_trans/lesson2/: CMakeLists.txt  README.md
vbslite_trans/lesson2/multi_topic_test/: README.md
vbslite_trans/lesson2/multi_topic_test/app1/: app1_config.xml  app1_test.c
vbslite_trans/lesson2/multi_topic_test/app2/: app2_config.xml  app2_test.c
vbslite_trans/lesson2/mvbs/include/mcdr/: mcdr_common.h  mcdr_seq_type.h  mcdr_serialize.h
vbslite_trans/lesson2/mvbs/include/mvbs/adapter/: adapter.h
vbslite_trans/lesson2/mvbs/include/mvbs/rtps/: guid.h  message.h
vbslite_trans/lesson2/mvbs/include/mvbs/utils/: bitmap.h  cdefs.h  log.h  mm_stat.h  string.h
vbslite_trans/lesson2/mvbs/posix_aux/src/: loop.c
vbslite_trans/lesson2/mvbs/src/core/messages/: message_factory.c  message_receiver.c  message_types.c
vbslite_trans/lesson2/mvbs/src/core/mvbs/: mvbs.c
vbslite_trans/lesson2/mvbs/src/core/netio/: tcp.c  udp.c
vbslite_trans/lesson2/mvbs/src/core/storages/: history_cache.c
vbslite_trans/lesson2/mvbs/src/core/utils/: mem_pool.c
vbslite_trans/lesson2/mvbs/src/mcdr/: mcdr.c
vbslite_trans/lesson2/tools/: README.md
vbslite_trans/lesson2/tools/mvbs-cfg/utils/: rewriter_xml.py
vbslite_trans/lesson2/tools/mvbs-idl/: calc_topic_size.py
vbslite_trans/lesson2/tools/mvbs-idl/resources/template/: paramsMesgHeader.jinja2
vbslite_trans/lesson3/: CMakeLists.txt  README.md
vbslite_trans/lesson3/mvbs/include/mcdr/: mcdr_seq_template.h
vbslite_trans/lesson3/mvbs/include/mvbs/rte/: Rte_Dds_Adaptor.h
vbslite_trans/lesson3/mvbs/include/mvbs/rtps/: discovery.h
vbslite_trans/lesson3/mvbs/include/mvbs/sections/: start_sec_bss.h  start_sec_data.h
vbslite_trans/lesson3/mvbs/include/mvbs/utils/: fifo.h  mem_pool.h  time.h
vbslite_trans/lesson3/mvbs/posix_aux/include/mvbs_aux/: mvbs_aux.h
vbslite_trans/lesson3/mvbs/posix_aux/src/: event.c
vbslite_trans/lesson3/mvbs/src/core/diag/: diag.c  recorder.c
vbslite_trans/lesson3/mvbs/src/core/discovery/: ptcp_proxy.c  spdp.c
vbslite_trans/lesson3/mvbs/src/core/entities/: writer.c
vbslite_trans/lesson3/mvbs/src/core/storages/: writer_cache.c
vbslite_trans/lesson3/mvbs/src/core/transport/: ipc_j6m_tansport.c
vbslite_trans/lesson3/mvbs/src/core/utils/: fifo.c  log.c  string.c  time.c
vbslite_trans/lesson3/mvbs/src/mcdr/: mcdr_deserialize.c
vbslite_trans/lesson3/rpc_test/: client.c  config.h  server.c
vbslite_trans/lesson3/tools/: .li-ci.yaml
vbslite_trans/lesson3/tools/mvbs-cfg/template/: mvbs_config.c.jinja2
vbslite_trans/lesson3/tools/mvbs-cfg/utils/: merge_xml.py
vbslite_trans/lesson3/tools/mvbs-idl/resources/template/: typeRpcClientBody.jinja2
vbslite_trans/lesson3/tools/mvbs-idl/typeprocess/: GenContainer_idl.py  GenContainer_rpc.py
vbslite_trans/lesson4/: CMakeLists.txt  README.md  envsetup.sh
vbslite_trans/lesson4/mvbs/: .gitignore  README.md
vbslite_trans/lesson4/mvbs/include/mcdr/: mcdr.h  mcdr_deserialize.h
vbslite_trans/lesson4/mvbs/include/mvbs/: base_type.h
vbslite_trans/lesson4/mvbs/include/mvbs/rtps/: time.h
vbslite_trans/lesson4/mvbs/include/mvbs/sections/: start_sec_const.h  stop_sec_bss.h  stop_sec_code.h
vbslite_trans/lesson4/mvbs/posix_aux/src/: event.h
vbslite_trans/lesson4/mvbs/src/core/diag/: query_serialize.c
vbslite_trans/lesson4/mvbs/src/core/entities/: reader.c  stateful_writer.c
vbslite_trans/lesson4/mvbs/src/core/netio/: socket.c
vbslite_trans/lesson4/mvbs/src/core/qos/: wlp.c
vbslite_trans/lesson4/tools/mvbs-cfg/: mvbs-config.py
vbslite_trans/lesson4/tools/mvbs-cfg/template/: mvbs_xml_test.c.jinja2
vbslite_trans/lesson4/tools/mvbs-cfg/utils/: __init__.py
vbslite_trans/lesson4/tools/mvbs-idl/: parser_idl.py
vbslite_trans/lesson4/tools/mvbs-idl/example/: Makefile  rpc.idl
vbslite_trans/lesson4/tools/mvbs-idl/resources/template/: typeRpcServerHeader.jinja2
vbslite_trans/lesson4/udp_test/pub/: pub_test.c
vbslite_trans/lesson4/udp_test/sub/: sub_config.xml  sub_test.c
(+201 files in other folders)
